clean up, docs, minor refactor(s) 🧹  (#38)
