# http/api/status.go
@@ -7,22 +7,12 @@ import (
 	"net/url"
 	"strings"
 
-	"github.com/jessepeterson/kmfddm/ddm"
 	"github.com/jessepeterson/kmfddm/log"
 	"github.com/jessepeterson/kmfddm/storage"
 )
 
-type StatusAPIStorage interface {
-	RetrieveDeclarationStatus(ctx context.Context, enrollmentIDs []string) (map[string][]ddm.DeclarationQueryStatus, error)
-	RetrieveStatusErrors(ctx context.Context, enrollmentIDs []string, offset, limit int) (map[string][]storage.StatusError, error)
-	RetrieveStatusValues(ctx context.Context, enrollmentIDs []string, pathPrefix string) (map[string][]storage.StatusValue, error)
-}
-
-// GetDeclarationStatusHandler retrieves the the declaration status items
-// for the provided enrollment IDs.
-// The entire request URL path is assumed to contain the set name.
-// This implies the handler should have the path prefix stripped before use.
-func GetDeclarationStatusHandler(store StatusAPIStorage, logger log.Logger) http.HandlerFunc {
+// GetDeclarationStatusHandler returns a handler that retrives that last declaration status for an enrollment ID.
+func GetDeclarationStatusHandler(store storage.StatusDeclarationsRetriever, logger log.Logger) http.HandlerFunc {
 	return simpleJSONResourceHandler(
 		logger,
 		func(ctx context.Context, resource string, _ *url.URL) (interface{}, error) {
@@ -31,7 +21,8 @@ func GetDeclarationStatusHandler(store StatusAPIStorage, logger log.Logger) http
 	)
 }
 
-func GetStatusErrorsHandler(store StatusAPIStorage, logger log.Logger) http.HandlerFunc {
+// GetStatusErrorsHandler returns a handler that retrieves the collected errors for an enrollment.
+func GetStatusErrorsHandler(store storage.StatusErrorsRetriever, logger log.Logger) http.HandlerFunc {
 	return simpleJSONResourceHandler(
 		logger,
 		func(ctx context.Context, resource string, _ *url.URL) (interface{}, error) {
@@ -43,7 +34,8 @@ func GetStatusErrorsHandler(store StatusAPIStorage, logger log.Logger) http.Hand
 	)
 }
 
-func GetStatusValuesHandler(store StatusAPIStorage, logger log.Logger) http.HandlerFunc {
+// GetStatusValuesHandler returns a handler that retrieves the collected values for an enrollment.
+func GetStatusValuesHandler(store storage.StatusValuesRetriever, logger log.Logger) http.HandlerFunc {
 	return simpleJSONResourceHandler(
 		logger,
 		func(ctx context.Context, resource string, u *url.URL) (interface{}, error) {
